Fleshed out PublisherBuilder and ProcessorBuilder APIs
These APIs now have reasonable feature parity with the JDK8 Stream API.
A few methods haven't been added that don't really make sense for
typical reactive streams processing use cases, such as peek, count,
sorted, distinct, and some of the reduction methods.

A few permutations of flatMap have been added - specifically flatMap to
a CompletionStage and flatMap to a Iterable.

Some of the stages have been removed, OfSingle, OfMany and Empty have
all been replaced with a single Of stage.